updated with file watcher
